Implement numeric interface heirarchy for generic math operations