@@ -1,4 +1,4 @@
 @ECHO OFF
 REM Startup the interpreter on Windows systems
 REM Launches Java on the executable .jar, passing through all command-line arguments
-java -jar Spartan.jar %*
+java --enable-preview -jar Spartan.jar %*
